--- a/raregifs/package.json
+++ b/raregifs/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cloudinary-react": "^1.7.0",
     "dotenv": "^8.2.0",
     "dropzone": "^5.9.2",
     "next": "^10.1.3",
