--- a/raregifs/package.json
+++ b/raregifs/package.json
@@ -10,6 +10,7 @@
     "cloudinary-react": "^1.7.0",
     "dotenv": "^8.2.0",
     "dropzone": "^5.9.2",
+    "material-ui-dropzone": "^3.5.0",
     "next": "^10.1.3",
     "next.js": "^1.0.3",
     "react": "^17.0.1",
